added stop features and stream text

--- a/templates/test.html
+++ b/templates/test.html
@@ -37,7 +37,8 @@ content %}
       .then((data) => {
         if (data.success) {
           document.getElementById("Status").innerText = "Recording in Progress";
-          document.getElementById("response").value = "";
+          document.getElementById("response").value =
+            "New Recording in Progress";
           startStream();
           console.log(data.transcript);
         } else {
@@ -66,10 +67,9 @@ content %}
   function startStream() {
     const eventSource = new EventSource("/stream");
     eventSource.onmessage = function (event) {
-      console.log(event);
       const textarea = document.getElementById("response");
-      console.log(event.data);
-      textarea.value += event.data + "\n";
+      console.log;
+      textarea.value += data.transcript + "\n";
       textarea.scrollTop = textarea.scrollHeight; // Scroll to the bottom
     };
   }
